--- a/valtiot/ee.html
+++ b/valtiot/ee.html
@@ -8,9 +8,9 @@
     
     <style>
         h1 {
-            text-align: center;
+            
             color: blue;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family:Georgia, 'Times New Roman', Times, serif
         }
         p {
             font-family: Georgia, 'Times New Roman', Times, serif;
