--- a/valtiot/cz.html
+++ b/valtiot/cz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Czech Republic</h1>
-    <img src="../img/Flag_of_the_Czech_Republic" alt="Czech Republic" width="200" height="150" />
+    <img src="../img/Flag_of_the_Czech_Republic.png" alt="Czech Republic" width="200" height="150" />
     <div>
         <p>Asukasluku: <b>10 588 063</b></p>
         <p>Pinta-ala: <b>78 867 km²</b></p>
